--- a/pillpassport/app/src/main/res/layout/activity_pill_content.xml
+++ b/pillpassport/app/src/main/res/layout/activity_pill_content.xml
@@ -13,7 +13,8 @@
         android:layout_height="236dp"
         android:adjustViewBounds="false"
         android:contentDescription="image"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
